--- a/test_task_ML.ipynb
+++ b/test_task_ML.ipynb
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1041,11 +1041,11 @@
     "plt.title('Распределение возраста заемщиков', fontsize=16)\n",
     "plt.xlabel('Возраст', fontsize=14)\n",
     "plt.ylabel('Количество', fontsize=14)\n",
-    "plt.grid(axis='y', alpha=0.75) # Добавим сетку\n",
+    "plt.grid(axis='y', alpha=0.75)\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(figsize=(8, 4))  # Уменьшим высоту boxplot\n",
-    "sns.boxplot(x=df['age'], color='skyblue') # boxplot\n",
+    "plt.figure(figsize=(8, 4))  \n",
+    "sns.boxplot(x=df['age'], color='skyblue')\n",
     "plt.title('Boxplot возраста заемщиков', fontsize=16)\n",
     "plt.xlabel('Возраст', fontsize=14)\n",
     "plt.grid(axis='x', alpha=0.75)\n",
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,6 @@
     "upper_bound_debt = df['DebtRatio'].quantile(0.999)\n",
     "print(f\"Верхняя граница (99.9-й перцентиль) для DebtRatio: {upper_bound_debt:.2f}\")\n",
     "\n",
-    "# Заменяем выбросы (используем .loc, чтобы избежать SettingWithCopyWarning)\n",
     "df.loc[df['DebtRatio'] > upper_bound_debt, 'DebtRatio'] = upper_bound_debt\n",
     "\n",
     "\n",
@@ -1360,15 +1359,12 @@
    "source": [
     "##### 1.3.4 MonthlyIncome (Месячный доход)\n",
     "\n",
-    "Переходим к месячному доходу.  Ранее мы уже заполняли пропуски в этом признаке медианой.  Теперь посмотрим на распределение и обработаем выбросы. Как мы помним из анализа пропусков и визуализации, распределение `MonthlyIncome` имеет тяжелый правый хвост.\n",
-    "\n",
-    "**Инсайты по предыдущим этапам:**\n",
-    "* Пропуски в `MonthlyIncome` были заполнены медианным значением, так как распределение имеет выраженную асимметрию вправо и выбросы."
+    "Переходим к месячному доходу.  Ранее мы уже заполняли пропуски в этом признаке медианой.  Теперь посмотрим на распределение и обработаем выбросы. Как мы помним из анализа пропусков и визуализации, распределение `MonthlyIncome` имеет тяжелый правый хвост."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1484,15 +1480,15 @@
     "\n",
     "\n",
     "# Повторная визуализация\n",
-    "plt.figure(figsize=(10, 6))  # Немного увеличим размер\n",
-    "sns.histplot(df['MonthlyIncome'], kde=True, bins=50, color='mediumpurple') # Добавим цвет\n",
-    "plt.title('Распределение MonthlyIncome (после winsorization)', fontsize=18) # Увеличим шрифт\n",
+    "plt.figure(figsize=(10, 6)) \n",
+    "sns.histplot(df['MonthlyIncome'], kde=True, bins=50, color='mediumpurple') \n",
+    "plt.title('Распределение MonthlyIncome (после winsorization)', fontsize=18) \n",
     "plt.xlabel('Месячный доход', fontsize=16)\n",
     "plt.ylabel('Количество', fontsize=16)\n",
     "plt.grid(axis='y', alpha=0.75)\n",
     "# Добавим вертикальную линию, показывающую медиану\n",
     "plt.axvline(df['MonthlyIncome'].median(), color='red', linestyle='dashed', linewidth=2, label=f\"Медиана: {df['MonthlyIncome'].median():.0f}\")\n",
-    "plt.legend() # Добавим легенду\n",
+    "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
@@ -1864,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1951,7 @@
     "\n",
     "# Гистограмма (до обработки)\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.histplot(df['NumberRealEstateLoansOrLines'], kde=False, bins=30, color='#EF3124')  # Используем bins=30 и Альфа-красный\n",
+    "sns.histplot(df['NumberRealEstateLoansOrLines'], kde=False, bins=30, color='#EF3124')\n",
     "plt.title('Распределение количества ипотечных кредитов и займов', fontsize=20)\n",
     "plt.xlabel('Количество ипотек и займов', fontsize=18)\n",
     "plt.ylabel('Количество заемщиков', fontsize=18)\n",
@@ -1966,7 +1962,7 @@
     "\n",
     "# Boxplot (до обработки)\n",
     "plt.figure(figsize=(8, 3))\n",
-    "sns.boxplot(x=df['NumberRealEstateLoansOrLines'], color='#EF3124', showfliers=True)  # Оставляем выбросы на boxplot (пока)\n",
+    "sns.boxplot(x=df['NumberRealEstateLoansOrLines'], color='#EF3124', showfliers=True)\n",
     "plt.title('Boxplot для количества ипотечных кредитов и займов', fontsize=18)\n",
     "plt.xlabel('Количество ипотек и займов', fontsize=16)\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.7)\n",
@@ -1982,7 +1978,7 @@
     "# Повторная визуализация (после обработки)\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.histplot(df['NumberRealEstateLoansOrLines'], kde=False, bins=int(upper_bound_realestate + 1),  # bins по количеству уникальных значений\n",
-    "             color='#D1D5D8', edgecolor='black')  # Альфа-платиновый + черный контур\n",
+    "             color='#D1D5D8', edgecolor='black')\n",
     "plt.title('Распределение количества ипотечных кредитов и займов (после обработки)', fontsize=20)\n",
     "plt.xlabel('Количество ипотек и займов', fontsize=18)\n",
     "plt.ylabel('Количество заемщиков', fontsize=18)\n",
@@ -2197,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2240,7 @@
     "class_balance = df['SeriousDlqin2yrs'].value_counts(normalize=True)\n",
     "\n",
     "plt.figure(figsize=(8, 5))  # Изменим размер\n",
-    "sns.barplot(x=class_balance.index, y=class_balance.values, hue=class_balance.values, palette=['#D1D5D8', '#EF3124']) # Цвета Альфа-Банка\n",
+    "sns.barplot(x=class_balance.index, y=class_balance.values, hue=class_balance.values, palette=['#D1D5D8', '#EF3124'])\n",
     "plt.title('Баланс классов (SeriousDlqin2yrs)', fontsize=20)\n",
     "plt.xlabel('Класс (0 - нет дефолта, 1 - дефолт)', fontsize=18)\n",
     "plt.ylabel('Доля', fontsize=18)\n",
@@ -2633,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2682,7 @@
     "    'NumberOfDependents',\n",
     "    'NumberRealEstateLoansOrLines',\n",
     "    'NumberOfOpenCreditLinesAndLoans',\n",
-    "    'NumberOfTimesPastDue_Processed'  #  ПРАВИЛЬНЫЙ признак!\n",
+    "    'NumberOfTimesPastDue_Processed' \n",
     "]\n",
     "\n",
     "# 1. Сначала приводим ВСЕ числовые столбцы к float64\n",
@@ -2696,7 +2692,7 @@
     "        X_val[col] = X_val[col].astype('float64')\n",
     "        X_test[col] = X_test[col].astype('float64')\n",
     "\n",
-    "# 2. Потом категориальные - к int (используем .iloc)\n",
+    "# 2. Потом категориальные - к int\n",
     "for col in cat_features:\n",
     "    X_train[col] = X_train[col].astype(int)\n",
     "    X_val[col] = X_val[col].astype(int)\n",
@@ -3537,9 +3533,7 @@
     "*   **Устранение дискриминации:**  Использовать методы post-processing или fairness-aware алгоритмы для уменьшения дискриминации по возрасту.\n",
     "*   **Проверка данных:**  Проверить данные на наличие ошибок (особенно значения 96, 97, 98 в признаках, связанных с просрочками).\n",
     "\n",
-    "### 6.4 Пример\n",
-    "\n",
-    "**Вопрос:** Как изменится прогноз, если у заемщика появится иждивенец?\n",
+    "### **Вопрос:** Как изменится прогноз, если у заемщика появится иждивенец?\n",
     "\n",
     "**Ответ:**  В среднем, появление иждивенца *увеличивает* вероятность дефолта, предсказываемую моделью.  Это видно на графике распределения SHAP values для признака `NumberOfDependents`:  более высокие значения признака (большее количество иждивенцев) связаны с положительными SHAP values, то есть с увеличением риска.  Однако, влияние этого признака *не является определяющим* и зависит от значений других признаков.\n",
     "\n",
